# heat-pump-calc-api

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  claude_instructions.md  library.py  main.py  profile_lines.py  pyproject.toml  requirements.txt
econ/: api_router.py  econ.py  elec_cost.py  models.py
energy/: api_router.py  energy_model.py  fit_model.py  heat_pump_performance.py  models.py  retrofit_analysis.py
general/: dict2d.py  models.py  utils.py
heat/: api_router.py  elec_cost.py  heat_pump_analysis.py  home_heat_model.py  hspf_convert.py  models.py
heatpump/: home_heat_model.py
models/: general.py
templates/: index.html
templates/shared/: layout.html
